Fixed overlay spilled over on sidebar

--- a/_sass/tiles.scss
+++ b/_sass/tiles.scss
@@ -131,7 +131,7 @@
 			height: 60px;
 			margin-top: 60px;
 			padding-right: 20px;
-			min-height: 60px;
+			min-height: 50px;
 			background: rgba(0,0,0,0.8);
 
 			h4 {
